# RCFlow

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  ARTIFACTS_IMPLEMENTATION.md  CHANGELOG.md  CLAUDE.md  CLAUDE_CODE_INTERACTION_GUIDE.md  Design.md  LICENSE  Makefile  OPENAI_PROVIDER_PLAN.md  PLAN-session-reorder.md  README.md  SECURITY_REVIEW.md  TEST-COVERAGE-GAPS.md  drafts-per-session-plan.md  justfile  pyproject.toml  rcflow.spec
.claude/output/: 20260228-104500_test-session-updates.py  20260228-104600_session-updates-summary.md  20260228-141800_codebase-architecture-analysis.md  20260228-142052_streaming-architecture-analysis.md  20260228-155615_test-realtime-session-updates.py  20260228-session-state-analysis.md  20260301-120000_codex-cli-implementation-plan.md  test_session_updates.py
.github/ISSUE_TEMPLATE/: bug.yml  crash.yml  feature_request.yml  other.yml
.github/workflows/: build.yml  ci.yml  release.yml
docs/: e2e-testing-options.md  plan-tasks-feature.md  pre-planning-feature-plan.md  session-badge-architecture.md
docs/design/: README.md  architecture.md  configuration.md  database.md  deployment.md  direct-tool-mode.md  executors.md  github.md  http-api.md  linear.md  mentions.md  permissions.md  project-structure.md  prompt-templates.md  refactoring.md  sessions.md  slash-commands.md  telemetry.md  tools.md  websocket-api.md
rcflowclient/: README.md  analysis_options.yaml  pubspec.yaml
rcflowclient/android/: gradle.properties
rcflowclient/integration_test/: app_test.dart
rcflowclient/lib/: main.dart  theme.dart  tips.dart
rcflowclient/linux/: CMakeLists.txt  rcflow-client.desktop
rcflowclient/macos/: Podfile
rcflowclient/test/: widget_test.dart
rcflowclient/tool/: check_coverage.sh
rcflowclient/tools/: generate_sounds.py
rcflowclient/web/: index.html  manifest.json
rcflowclient/windows/: CMakeLists.txt
scripts/: bundle.py  bundle_macos_client.py  deb-cache-refresh.sh  generate_icon.py  get-client.sh  get-worker.sh  inno_setup.iss  inno_setup_client.iss  install.ps1  install.sh  install_macos.sh  linux_gui_window.py  rcflow_macos.entitlements  rsync-to-mac.sh  rsync-to-ubuntu.sh  rsync-to-windows.sh  setup-emulator.sh  start-emulator.sh  uninstall.ps1  uninstall.sh  uninstall_macos.sh
src/: __init__.py  __main__.py  config.py  exceptions.py  gui.py  gui_core.py  gui_macos.py  logs.py  main.py  paths.py  theme.py  tray.py
src/api/: deps.py  http.py
src/api/integrations/: __init__.py  (+2 more)
src/core/: __init__.py  agent_auth.py  agent_claude_code.py  agent_codex.py  agent_opencode.py  agent_prompt.py  attachment_store.py  background_tasks.py  badges.py  buffer.py  context.py  cwd_tracking.py  llm.py  pending_store.py  permissions.py  prompt_router.py  session.py  session_lifecycle.py  session_state.py  wakeup_scheduler.py  wakeup_store.py
src/database/: __init__.py  engine.py
src/db/: engine.py
src/executors/: __init__.py  base.py  claude_code.py  claude_code_sdk.py  codex.py  http.py  opencode.py  shell.py  worktree.py
src/gui/: __init__.py  _dashboard_ctk.py  core.py  deeplink.py  linux_app.py  macos.py  theme.py  tray.py  updater.py  windows.py
src/models/: db.py
src/prompts/: __init__.py  builder.py
src/schemas/: __init__.py  artifacts.py  auth.py  config.py  linear.py  plugins.py  sessions.py  tasks.py  tool_settings.py  tools.py  worktrees.py
src/services/: __init__.py  artifact_scanner.py  cli_link.py  git_ops.py  github_service.py  linear_service.py  model_catalog.py  natpmp_service.py  pr_assist.py  telemetry_service.py  tool_manager.py  tool_settings.py  upnp_service.py  usage_service.py
src/terminal/: __init__.py  manager.py  session.py
src/tools/: __init__.py  loader.py  registry.py
src/utils/: process.py  pty_utils.py
systemd/: rcflow.service
tests/: conftest.py  test_config_defaults.py  test_gui.py  test_gui_deeplink.py  test_gui_ipc.py  test_gui_updater.py
tests/e2e/: conftest.py  mock_anthropic_server.py  mock_llm.py  test_protocol.py  ws_helpers.py
tests/test_api/: test_claude_code_login.py  test_config_reload.py  test_deps.py  test_http.py  test_info_upnp.py  test_models_route.py  test_rcflow_plugins.py  test_routes_artifacts.py  test_routes_auth.py  test_routes_dashboard.py  test_routes_projects.py  test_routes_sessions_reorder.py  test_routes_tasks.py  test_routes_tasks_plan.py  test_routes_telemetry.py  test_routes_tools.py  test_routes_worktrees.py  test_slash_commands.py  test_uploads.py
tests/test_core/: test_agent_auth.py  test_agent_codex.py  test_agent_diff.py  test_agent_monitor.py  test_agent_opencode.py  test_agent_prompt.py  test_agent_question_sdk.py  test_background_tasks_plan.py  test_badges.py  test_buffer.py  test_context.py  test_context_branches.py  test_context_plan.py  test_cwd_tracking.py  test_drain_claude_code.py  test_llm.py  test_llm_caveman.py  test_llm_vision.py  test_pending_store.py  test_permissions.py  test_prompt_router.py  test_prompt_router_plan.py  test_reattach_executor.py  test_session.py  test_session_flush.py  test_session_lifecycle.py  test_wakeup_scheduler.py  test_wakeup_store.py
tests/test_executors/: test_claude_code.py  test_claude_code_sdk.py  test_claude_code_sdk_more.py  test_codex.py  test_http.py  test_opencode.py  test_shell.py  test_worktree.py  test_worktree_more.py
tests/test_prompts/: test_builder.py
tests/test_schemas/: test_schemas.py
tests/test_services/: test_artifact_scanner.py  test_artifact_scanner_scan.py  test_cli_link.py  test_git_ops.py  test_github_service.py  test_github_service_branches.py  test_linear_service.py  test_model_catalog.py  test_natpmp_service.py  test_pr_assist.py  test_pr_assist_build.py  test_telemetry_service.py  test_tool_manager.py  test_tool_manager_more.py  test_tool_settings.py  test_tool_settings_caveman.py  test_upnp_service.py  test_usage_service.py  test_worker_service.py
tests/test_tools/: test_loader.py  test_registry.py
tools/: claude_code.json  cmd.json  codex.json  opencode.json  powershell.json  shell_exec.json  system_info.json  worktree.json
(+343 files in other folders)
