[project]
name = "rcflow"
version = "0.11.0"
description = "WebSocket-based action server that translates natural language prompts into tool executions via LLM"
readme = "Design.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "anthropic[bedrock]>=0.42.0",
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.13.3",
    "cryptography>=43.0.0",
    "rust-just[dev]>=1.46.0",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30.0",
]
bundle = [
    "pyinstaller>=6.0.0",
]
tray = [
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
    "pywinpty>=2.0.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx",
    "ruff>=0.8.0",
]

[project.scripts]
rcflow = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "PLC0415",  # import-outside-top-level
]

[tool.ruff.lint.isort]
known-first-party = ["src"]
