[project]
name = "rcflow"
version = "0.41.0"
description = "WebSocket-based action server that translates natural language prompts into tool executions via LLM"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "anthropic[bedrock]>=0.42.0",
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.13.4",
    "aioboto3>=13.0.0",
    "cryptography>=46.0.7",
    "miniupnpc>=2.2.8",
    "rust-just[dev]>=1.46.0",
    "wtpython @ git+https://github.com/Flowelfox/worktree-manager-python",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30.0",
]
bundle = [
    "pyinstaller>=6.0.0",
]
tray = [
    "customtkinter>=5.2.0",
    "pystray>=0.19.0; sys_platform != 'darwin'",
    "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
    "Pillow>=12.2.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx",
    "ruff>=0.8.0",
]

[project.scripts]
rcflow = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
timeout = 60
markers = [
    "e2e: end-to-end WebSocket protocol tests (uses real session/tool pipeline with mock LLM)",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 0

[tool.ty.src]
exclude = ["scripts/", "src/gui/macos.py"]

[[tool.ty.overrides]]
include = ["tests/test_api/**"]
rules.possibly-missing-attribute = "ignore"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "PLC0415",  # import-outside-top-level
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[dependency-groups]
dev = [
    "anybadge>=1.16.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.3.0",
]
