[project]
name = "rcflow"
version = "0.44.0"
description = "WebSocket-based action server that translates natural language prompts into tool executions via LLM"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "python-multipart>=0.0.26",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "aiosqlite>=0.20.0",
    "alembic>=1.14.0",
    "anthropic[bedrock]>=0.42.0",
    "openai>=1.60.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "jinja2>=3.1.0",
    "aiohttp>=3.13.4",
    "aioboto3>=13.0.0",
    "cryptography>=46.0.7",
    "miniupnpc>=2.2.8",
    "rust-just[dev]>=1.46.0",
    "wtpython @ git+https://github.com/Flowelfox/worktree-manager-python",
    "claude-agent-sdk>=0.2.87",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.30.0",
]
bundle = [
    "pyinstaller>=6.0.0",
]
tray = [
    "customtkinter>=5.2.0",
    "pystray>=0.19.0; sys_platform != 'darwin'",
    "pyobjc-framework-Cocoa>=9.0; sys_platform == 'darwin'",
    "Pillow>=12.2.0",
    "pywinpty>=2.0.0; sys_platform == 'win32'",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx",
    "ruff>=0.8.0",
]

[project.scripts]
rcflow = "src.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
timeout = 60
markers = [
    "e2e: end-to-end WebSocket protocol tests (uses real session/tool pipeline with mock LLM)",
]

[tool.coverage.run]
source = ["src"]
omit = ["src/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 54

[tool.ty.src]
# GUI modules import optional native UI deps (customtkinter, pystray, PIL,
# PyObjC) from the `tray`/gui extras that aren't installed for the isolated
# `uvx ty` run, so type-checking them is pure noise — exclude them.
exclude = [
    "scripts/",
    "src/gui/macos.py",
    "src/gui/linux_app.py",
    "src/gui/windows.py",
    "src/gui/_dashboard_ctk.py",
]

[[tool.ty.overrides]]
include = ["tests/test_api/**"]
rules.possibly-missing-attribute = "ignore"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific
    "PLC0415",  # import-outside-top-level
    "C901",   # complexity
    "ASYNC",  # flake8-async
    "S",      # flake8-bandit (security)
    "RET",    # flake8-return
    "LOG",    # flake8-logging
    "D",      # pydocstyle (docstring quality; see ignore list + convention)
    # COM (trailing-comma) intentionally excluded — ruff's docs warn that
    # COM812 / COM819 conflict with `ruff format` (which already handles
    # trailing commas), so enabling both produces oscillating fixes.
]

# Inherent to this CLI / WebSocket-server / build-tooling codebase. Enabling
# the parent S rule still catches the high-signal subrules (hardcoded passwords,
# tarfile unsafe extract, jinja autoescape, weak hashes, etc.).
ignore = [
    "S104",     # bind to 0.0.0.0 — intentional for the server listener
    "S108",     # /tmp paths — used in tests and platform-specific bundling
    "S110",     # try/except/pass — used for best-effort cleanup paths
    "S310",     # urllib.request.urlopen — used for trusted release-asset fetches
    "S603",     # subprocess without shell=False — we launch trusted CLIs
    "S607",     # start-process with partial path — `claude`, `codex`, `opencode`
    "S606",     # start-process without shell — intentional
    "ASYNC240", # pathlib in async — synchronous fs calls are OK in our context
    "D105",     # undocumented magic method — __eq__/__repr__ etc. are self-evident
    "D107",     # undocumented __init__ — documented at the class level instead
]

# Complexity ratchet: the current ceiling is set high so that landing the rule
# is a no-op for working code. Phase 2 (composition refactor) reduces this
# organically by splitting the highest-complexity functions
# (handle_prompt=43, ws_input_text=63, _relay_claude_code_stream=49, etc.).
# Lower the ceiling step by step as those splits land.
[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.mccabe]
max-complexity = 70

[tool.ruff.lint.per-file-ignores]
# Tests use assert and rotate through local temp files / fake subprocesses.
# Test functions/classes are self-documenting by name, so the docstring-content
# rules (D1xx) don't apply.
"tests/*" = ["S101", "S105", "S106", "D100", "D101", "D102", "D103", "D104", "D106", "D205"]
# Database migrations are mechanically generated; complexity + docstring gates
# don't fit generated code.
"src/database/migrations/*" = ["C901", "D100", "D101", "D103"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[dependency-groups]
dev = [
    "anybadge>=1.16.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.3.0",
]
